토스결제 장난감 이름 수정, 배송요청사항 수정 / 서진경/ 02-13 22:38
[상세정보]
pay.html 수정
pay.js 수정

--- a/src/main/resources/templates/pay.html
+++ b/src/main/resources/templates/pay.html
@@ -474,7 +474,7 @@ var toyName = "";
 if(toyVali.length==undefined){
 	toyName = toy[0].toyNm1
 }else{
-	toyName = toy[0].toyNm1+' 외 '+ (toy.length-1);
+	toyName = toy[0].toyNm1.substr(0,18)+'...' + ' 외 '+ (toy.length-1);
 }
 var cName = /*[[${session.loginMember.name}]]*/{};
 
