게시판 등록, 상세보기/박태성/02-13 23:57 삽입과 상세보기 문제 해결했습니다.

--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -159,8 +159,8 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" data-bs-auto-close="outside" id="nav6">커뮤니티</a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item hmenu" th:href="@{/notice}" >공지사항</a></li>
-                  <li><a class="dropdown-item hmenu" th:href="@{/community}">자유게시판</a></li>
+                  <li><a class="dropdown-item hmenu" th:href="@{/community/notice}" >공지사항</a></li>
+                  <li><a class="dropdown-item hmenu" th:href="@{/community/freeboard}">자유게시판</a></li>
                 </ul>
               </li>
             </ul>
