회원정보수정 - 탈퇴기능 추가 / 조규완 / 02-14 11:52 [상세내용] 회원정보수정 - 탈퇴기능 추가

--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -97,6 +97,7 @@
 								<h3 class="fs-sm mb-0 text-muted">마이페이지</h3>
 							</div>
 							<ul class="list-unstyled mb-0">
+							 <th:block th:if="${session.loginMember.role == 'ROLE_USER'}">
 								<li class="border-bottom mb-0">
 									<div class="cgw3 d-flex align-items-center px-4 py-3">
 										<i class="ci-user opacity-60 me-2"></i>회원정보 수정
@@ -132,6 +133,36 @@
 											class="ci-sign-out me-2"></i>로그아웃</a>
 									</div>
 								</li>
+								</th:block>
+								 <th:block th:if="${session.loginMember.role != 'ROLE_USER'}">
+								 <li class="border-bottom mb-0">
+									<div class="cgw3 d-flex align-items-center px-4 py-3">
+										<i class="ci-user opacity-60 me-2"></i>회원정보 수정
+									</div>
+								</li>
+								<li class="border-bottom mb-0"><a
+									class="nav-link-style d-flex align-items-center px-4 py-3"
+									th:href="@{/mypage-4}"><i class="ci-edit opacity-60 me-2"></i>불편사항
+										신고 조회<span class="fs-sm text-muted ms-auto">[[${claimCount}]]</span></a></li>
+								<li class="border-bottom mb-0"><a
+									class="nav-link-style d-flex align-items-center px-4 py-3"
+									th:href="@{/mypage-5}"><i class="ci-document opacity-60 me-2"></i>내가
+										쓴 게시글<span class="fs-sm text-muted ms-auto">[[${boardCount}]]</span></a></li>
+								<li class="border-bottom mb-0"><a
+									class="nav-link-style d-flex align-items-center px-4 py-3"
+									th:href="@{/mypage-6}"><i class="ci-bag opacity-60 me-2"></i>대여
+										내역 조회<span class="fs-sm text-muted ms-auto">[[${rentalCount}]]</span></a></li>
+								<li class="border-bottom mb-0"><a
+									class="nav-link-style d-flex align-items-center px-4 py-3"
+									th:href="@{/mypage-7}"><i class="ci-cart opacity-60 me-2"></i>장바구니<span
+										class="fs-sm text-muted ms-auto">[[${cartCount}]]</span></a></li>
+								<li class="border-bottom mb-0">
+									<div class="nav-link-style d-flex align-items-center px-4 py-2">
+										<a class="fs-sm ms-auto btn btn-logout btn-sm" th:href="@{/logout}"><i
+											class="ci-sign-out me-2"></i>로그아웃</a>
+									</div>
+								</li>
+								</th:block>
 							</ul>
 						</div>
 					</div>
@@ -274,8 +305,10 @@
 							<div class="col-12">
 								<hr class="mt-2 mb-3">
 								<div
-									class="d-flex flex-wrap justify-content-between align-items-center">
+									class="d-flex flex-wrap cgw10">
 									<div class="form-check"></div>
+									<input type="button" class="btn btn-primary-cgw1 mt-3 mt-sm-0" id="deleteMember"
+										value="회원 탈퇴" > &nbsp;&nbsp;&nbsp;
 									<input type="submit" class="btn btn-primary-cgw1 mt-3 mt-sm-0"
 										value="회원정보 수정" >
 								</div>
@@ -360,6 +393,14 @@
         return true;
       }
     }
+    
+    $(function () {
+		$("#deleteMember").on("click", (e) => {
+			if(confirm("정말로 탈퇴하시겠습니까?!")) {
+				location.replace('/member/delete');
+			}
+		});
+	});
   </script>
 </body>
 
